--- a/html/menu_délice.html
+++ b/html/menu_délice.html
@@ -36,97 +36,114 @@
                     <i class="fa-solid fa-heart"></i>
                 </div>
             </section>
+            <div class="block-1">
 
-            <section class="menu">
-                <h2 class="menu__title">ENTRÉES</h2>
-                <div class="menu__btns">
-                    <article class="card">
-                        <div class="card__title">
-                            <h3>Tartare de poulpe acidulé</h3>
-                            <p>Aux zestes d'orange</p>
-                        </div>
-                        <span class="card__price">25€</span>
-                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                    </article>
-                    <article class="card">
-                        <div class="card__title">
-                            <h3>Velouté de légumes d'antan </h3>
-                            <p>Carotte, panais, topinambour</p>
-                        </div>
-                        <span class="card__price">35€</span>
-                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                    </article>
-                    <article class="card">
-                        <div class="card__title">
-                            <h3>Soupe à l'oignon </h3>
-                            <p>Revisitée</p>
-                        </div>
-                        <span class="card__price">20€</span>
-                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                    </article>
-                </div>
-            </section>
-            <section class="menu">
-                <h2 class="menu__btns">PLATS</h2>
-                <div class="menu__btns">
-                    <article class="card">
-                        <div class="card__title">
-                            <h3> Coquilles Saint-Jacques </h3>
-                            <p> Accompagnées d'une purée de panais</p>
-                        </div>
-                        <span class="card__price">40€</span>
-                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                    </article>
-                    <article class="card">
-                        <div class="card__title">
-                            <h3> Magret de canard</h3>
-                            <p> Et parmentier de pommes de terre</p>
-                        </div>
-                        <span class="card__price">35€</span>
-                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                    </article>
-                    <article class="card">
-                        <div class="card__title">
-                            <h3> Pigeonneau d’Ille-et-Vilaine</h3>
-                            <p>Sur son lit de gnocchis aux légumes</p>
-                        </div>
-                        <span class="card__price">44€</span>
-                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                    </article>
-                </div>
+                <section class="menu">
+                    <div class="menu__text">
+                        <h2>ENTRÉES</h2>
+                        <p class="menu__underline"></p>
+                    </div>
+                    <div class="menu__btns">
+                        <article class="card">
+                            <div class="card__title">
+                                <h3>Tartare de poulpe acidulé</h3>
+                                <p>Aux zestes d'orange</p>
+                            </div>
+                            <span class="card__price">25€</span>
+                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                        </article>
+                        <article class="card">
+                            <div class="card__title">
+                                <h3>Velouté de légumes d'antan </h3>
+                                <p>Carotte, panais, topinambour</p>
+                            </div>
+                            <span class="card__price">35€</span>
+                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                        </article>
+                        <article class="card">
+                            <div class="card__title">
+                                <h3>Soupe à l'oignon </h3>
+                                <p>Revisitée</p>
+                            </div>
+                            <span class="card__price">20€</span>
+                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                        </article>
+                    </div>
+                </section>
+            </div>
+            <div class="block-2">
+                <section class="menu">
 
-            </section>
-            <section class="menu">
-                <h2 class="menu__title">DESSERTS</h2>
-                <div class="menu__btns">
-                    <article class="card">
-                        <div class="card__title">
-                            <h3>
-                                Pétales de violettes glacés
-                            </h3>
-                            <p> Et purée de noisettes</p>
-                        </div>
-                        <span class="card__price">18€</span>
-                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                    </article>
-                    <article class="card">
-                        <div class="card__title">
-                            <h3>Fondant au chocolat</h3>
-                            <p>Revisitée</p>
-                        </div>
-                        <span class="card__price">22€</span>
-                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                    </article>
-                    <article class="card">
-                        <div class="card__title">
-                            <h3> Millefeuille croustillant</h3>
-                            <p>Myrtilles et pâte d’amande</p>
-                        </div>
-                        <span class="card__price">23€</span>
-                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                    </article>
-                </div>
-            </section>
+                    <div class="menu__text">
+                        <h2>PLATS</h2>
+                        <p class="menu__underline"></p>
+                    </div>
+                    <div class="menu__btns">
+                        <article class="card">
+                            <div class="card__title">
+                                <h3> Coquilles Saint-Jacques </h3>
+                                <p> Accompagnées d'une purée de panais</p>
+                            </div>
+                            <span class="card__price">40€</span>
+                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                        </article>
+                        <article class="card">
+                            <div class="card__title">
+                                <h3> Magret de canard</h3>
+                                <p> Et parmentier de pommes de terre</p>
+                            </div>
+                            <span class="card__price">35€</span>
+                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                        </article>
+                        <article class="card">
+                            <div class="card__title">
+                                <h3> Pigeonneau d’Ille-et-Vilaine</h3>
+                                <p>Sur son lit de gnocchis aux légumes</p>
+                            </div>
+                            <span class="card__price">44€</span>
+                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                        </article>
+                    </div>
+
+                </section>
+            </div>
+            <div class="block-3">
+                <section class="menu">
+
+                    <div class="menu__text">
+                        <h2>DESSERTS</h2>
+                        <p class="menu__underline"></p>
+                    </div>
+                    <div class="menu__btns">
+                        <article class="card">
+                            <div class="card__title">
+                                <h3>
+                                    Pétales de violettes glacés
+                                </h3>
+                                <p> Et purée de noisettes</p>
+                            </div>
+                            <span class="card__price">18€</span>
+                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                        </article>
+                        <article class="card">
+                            <div class="card__title">
+                                <h3>Fondant au chocolat</h3>
+                                <p>Revisitée</p>
+                            </div>
+                            <span class="card__price">22€</span>
+                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                        </article>
+                        <article class="card">
+                            <div class="card__title">
+                                <h3> Millefeuille croustillant</h3>
+                                <p>Myrtilles et pâte d’amande</p>
+                            </div>
+                            <span class="card__price">23€</span>
+                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                        </article>
+                    </div>
+                </section>
+            </div>
             <div class="menu_btn">
                 <button class="btn_commande">Commander</button>
             </div>
