--- a/html/menu_la_note.html
+++ b/html/menu_la_note.html
@@ -36,96 +36,111 @@
                     <i class="fa-solid fa-heart"></i>
                 </div>
             </section>
+            <div class="block-1">
 
-            <section class="menu">
-                <h2 class="menu__title">ENTRÉES</h2>
-                <div class="menu__btns">
-                    <article class="card">
-                        <div class="card__title">
-                            <h3>Tartare de thon</h3>
-                            <p> Assaisonné au yuzu</p>
+                <section class="menu">
+                    <div class="menu__text">
+                    <h2>ENTRÉES</h2>
+                    <p class="menu__underline"></p>
+                    </div>
+                    <div class="menu__btns">
+                        <article class="card">
+                            <div class="card__title">
+                                <h3>Tartare de thon</h3>
+                                <p> Assaisonné au yuzu</p>
+                            </div>
+                            <span class="card__price">25€</span>
+                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                        </article>
+                        <article class="card">
+                            <div class="card__title">
+                                <h3>Bouchée de homard croustillant </h3>
+                                <p>Et sa farandole de petits légumes</p>
+                            </div>
+                            <span class="card__price">35€</span>
+                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                        </article>
+                        <article class="card">
+                            <div class="card__title">
+                                <h3>Velouté de cèpes </h3>
+                                <p>Aux truffes</p>
+                            </div>
+                            <span class="card__price">20€</span>
+                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                        </article>
+                    </div>
+                </section>
+            </div>
+            <div class="block-2">
+                <section class="menu">
+                    <div class="menu__text">
+                        <h2>PLATS</h2>
+                        <p class="menu__underline"></p>
                         </div>
-                        <span class="card__price">25€</span>
-                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                    </article>
-                    <article class="card">
-                        <div class="card__title">
-                            <h3>Bouchée de homard croustillant </h3>
-                            <p>Et sa farandole de petits légumes</p>
-                        </div>
-                        <span class="card__price">35€</span>
-                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                    </article>
-                    <article class="card">
-                        <div class="card__title">
-                            <h3>Velouté de cèpes </h3>
-                            <p>Aux truffes</p>
-                        </div>
-                        <span class="card__price">20€</span>
-                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                    </article>
-                </div>
-            </section>
-            <section class="menu">
-                <h2 class="menu__title">PLATS</h2>
-                <div class="menu__btns">
-                    <article class="card">
-                        <div class="card__title">
-                            <h3>Poulet rôti aux herbes de Provence </h3>
-                            <p>Et sa crème de truffe</p>
+                    <div class="menu__btns">
+                        <article class="card">
+                            <div class="card__title">
+                                <h3>Poulet rôti aux herbes de Provence </h3>
+                                <p>Et sa crème de truffe</p>
 
-                        </div>
-                        <span class="card__price">40€</span>
-                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                    </article>
-                    <article class="card">
-                        <div class="card__title">
-                            <h3>Langouste rôti </h3>
-                            <p>Et ses légumes de saison</p>
-                        </div>
-                        <span class="card__price">35€</span>
-                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                    </article>
-                    <article class="card">
-                        <div class="card__title">
-                            <h3>Côte de bœuf Angu </h3>
-                            <p>Et sa purée de panais</p>
-                        </div>
-                        <span class="card__price">44€</span>
-                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                    </article>
-                </div>
+                            </div>
+                            <span class="card__price">40€</span>
+                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                        </article>
+                        <article class="card">
+                            <div class="card__title">
+                                <h3>Langouste rôti </h3>
+                                <p>Et ses légumes de saison</p>
+                            </div>
+                            <span class="card__price">35€</span>
+                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                        </article>
+                        <article class="card">
+                            <div class="card__title">
+                                <h3>Côte de bœuf Angu </h3>
+                                <p>Et sa purée de panais</p>
+                            </div>
+                            <span class="card__price">44€</span>
+                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                        </article>
+                    </div>
 
-            </section>
-            <section class="menu">
-                <h2 class="menu__title">DESSERTS</h2>
-                <div class="menu__btns">
-                    <article class="card">
-                        <div class="card__title">
-                            <h3>Farandole de dessert </h3>
-                            <p>Du chef</p>
+                </section>
+            </div>
+            <div class="block-3">
+                <section class="menu">
+                    <div class="menu__text">
+                        <h2>DESSERTS</h2>
+                        <p class="menu__underline"></p>
                         </div>
-                        <span class="card__price">18€</span>
-                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                    </article>
-                    <article class="card">
-                        <div class="card__title">
-                            <h3>Crème brulée </h3>
-                            <p> Revisitée</p>
-                        </div>
-                        <span class="card__price">22€</span>
-                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                    </article>
-                    <article class="card">
-                        <div class="card__title">
-                            <h3>Tiramisu</h3>
-                            <p>À la noisette</p>
-                        </div>
-                        <span class="card__price">23€</span>
-                        <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
-                    </article>
-                </div>
-            </section>
+                    <div class="menu__btns">
+                        <article class="card">
+                            <div class="card__title">
+                                <h3>Farandole de dessert </h3>
+                                <p>Du chef</p>
+                            </div>
+                            <span class="card__price">18€</span>
+                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                        </article>
+                        <article class="card">
+                            <div class="card__title">
+                                <h3>Crème brulée </h3>
+                                <p> Revisitée</p>
+                            </div>
+                            <span class="card__price">22€</span>
+                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                        </article>
+                        <article class="card">
+                            <div class="card__title">
+                                <h3>Tiramisu</h3>
+                                <p>À la noisette</p>
+                            </div>
+                            <span class="card__price">23€</span>
+                            <span class="card__checked"><i class="fa-solid fa-circle-check"></i></span>
+                        </article>
+                    </div>
+                </section>
+            </div>
             <div class="menu_btn">
                 <button class="btn_commande">Commander</button>
             </div>
